2005-12-23  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1566]
	* sysdeps/i386/i586/memusage.h: New file.
	* sysdeps/i386/memusage.h: Don't define GETTIME.

2005-12-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1499]
	* misc/syslog.c (SyslogAddr): Use sockaddr_un instead of sockaddr.
	(openlog_internal): Adjust for this change.

	* Makeconfig: Define CXXFLAGS.  Split out warnings from +gccwarn which
	are not understood by the C++ compiler.
	* Makerules: Add rules to build C++ code for test cases.
	* include/stdlib.h: Protect for inclusion in C++ code.
	* include/time.h: Likewise.

2005-12-22  Roland McGrath  <roland@redhat.com>

	* Makerules [gen-as-const-headers] (tests): Add one test per .sym
	file, not just one.
	($(objpfx)test-as-const.c): Target replaced with ...
	($(objpfx)test-as-const-%.c): ... this pattern rule.
	(generated): Add those files.

2005-12-22  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (timeout_handler): Rewrite ts initialization for
	C++ compatibility.

	* sysdeps/x86_64/__longjmp.S: Also protect SP and BP.
	* sysdeps/x86_64/setjmp.S: Likewise.

2005-12-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/i386/ucontext_i.sym: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/ucontext_i.sym: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/ucontext_i.sym: New file.
	* sysdeps/unix/sysv/linux/s390/s390-32/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/s390/s390-64/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/s390/ucontext_i.sym: New file.
	* sysdeps/unix/sysv/linux/sh/sh3/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/sh/sh3/ucontext_i.sym: New file.
	* sysdeps/unix/sysv/linux/sh/sh4/ucontext_i.h: File removed.
	* sysdeps/unix/sysv/linux/sh/sh4/ucontext_i.sym: New file.